--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -1,82 +1,118 @@
-<ul class="catalog-grid">
-  <li class="catalog-item">
-    <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-    <div class="catalog-item__img">
-      <picture>
-        <source type="image/webp" srcset="img/img-catenergy.webp 1x, img/img-catenergy@2x.webp 2x">
-        <img src="img/img-catenergy.jpg" srcset="img/img-catenergy@2x.jpg 2x" alt="Превью сайт питание для кошек"
-          width="358" height="578" />
-      </picture>
-    </div>
-    <div class="catalog-item__hover-menu">
-      <a href="https://askomarov.github.io/CatFromAcademy/index.html" target="_blank" class="catalog-item__title-link">
-        <h2 class="catalog-item__title">CatEnergy</h2>
-      </a>
-      <p class="catalog-item__desc">Интернет-магазин <br> вязаных игрушек</p>
-      <a href="https://askomarov.github.io/CatFromAcademy/index.html" target="_blank"
-        class="catalog-item__btn main-btn">view project</a>
-    </div>
-  </li>
-  <li class="catalog-item">
-    <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-    <div class="catalog-item__img">
-      <picture>
-        <source type="image/webp" srcset="img/img-gllacy.webp 1x, img/img-gllacy@2x.webp 2x">
-        <img src="img/img-gllacy.png" srcset="img/img-gllacy@2x.png" alt="Превью сайта салон красоты Barber-shop"
-          width="358" height="578" />
-      </picture>
-    </div>
-    <div class="catalog-item__hover-menu">
-      <a href="" class="catalog-item__title-link">
-        <h2 class="catalog-item__title">Gllacy</h2>
-      </a>
-      <p class="catalog-item__desc">Интернет-магазин <br> мороженого</p>
-      <button type="button" class="catalog-item__btn main-btn">view project</button>
-    </div>
-  </li>
-  <li class="catalog-item">
-    <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-    <div class="catalog-item__img">
-      <img src="img/img-sedona.jpg" alt="превью сайта для туристов Sedona" width="358" height="578" />
-    </div>
-    <div class="catalog-item__hover-menu">
-      <a href="https://askomarov.github.io/mySedonaByHtmlAcademy/" target="_blank" class="catalog-item__title-link">
-        <h2 class="catalog-item__title">Sedona</h2>
-      </a>
-      <p class="catalog-item__desc">Информационный сайт<br> для туристов</p>
-      <a href="https://askomarov.github.io/mySedonaByHtmlAcademy/" target="_blank"
-        class="catalog-item__btn main-btn">view project</a>
-    </div>
-  </li>
-  <li class="catalog-item">
-    <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-    <div class="catalog-item__img">
-      <img src="img/img-pink.jpg" alt="Превью сайт приложения PINK" width="358" height="578" />
-    </div>
-    <div class="catalog-item__hover-menu">
-      <a href="https://askomarov.github.io/myPink/" target="_blank" class="catalog-item__title-link">
-        <h2 class="catalog-item__title">Pink</h2>
-      </a>
-      <p class="catalog-item__desc">Продуктовый лендинг<br>приложения для iOS и Android</p>
-      <a href="https://askomarov.github.io/myPink/" target="_blank" class="catalog-item__btn main-btn">view
-        project</a>
-    </div>
-  </li>
-  <li class="catalog-item">
-    <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-    <div class="catalog-item__img">
-      <picture>
-        <source type="image/webp" srcset="img/img-city.webp 1x, img/img-city@2x.webp 2x">
-        <img src="img/img-city.jpg" srcset="img/img-city@2x.jpg 2x" alt="Превью сайт повышения квалификации" width="358"
-          height="578" />
-      </picture>
-    </div>
-    <div class="catalog-item__hover-menu">
-      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__title-link">
-        <h2 class="catalog-item__title">Filter</h2>
-      </a>
-      <p class="catalog-item__desc">Пример списка товаров с кастомными элементами формы</p>
-      <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">view project</a>
-    </div>
-  </li>
-</ul>
+<section class="catalog">
+  <div class="catalog__container container">
+    <h2 class="catalog__title main-title">Каталог выполненных работ</h2>
+
+    <ul class="catalog-grid">
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="img/img-pognali@1xdesktop.webp">
+            <img src="img/img-pognali@1xdesktop.png" srcset="" alt="Превью сайт повышения квалификации" width="358"
+              height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/pognaliHtmlAcademy/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Pognali</h2>
+          </a>
+          <p class="catalog-item__desc">Полностью адаптивный трех-страничный сайт, с огромным количеством трудоемких
+            элементов</p>
+          <a href="https://askomarov.github.io/pognaliHtmlAcademy/" target="_blank"
+            class="catalog-item__btn main-btn">view
+            project</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="img/img-catenergy.webp 1x, img/img-catenergy@2x.webp 2x">
+            <img src="img/img-catenergy.jpg" srcset="img/img-catenergy@2x.jpg 2x" alt="Превью сайт питание для кошек"
+              width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/CatFromAcademy/index.html" target="_blank"
+            class="catalog-item__title-link">
+            <h2 class="catalog-item__title">CatEnergy</h2>
+          </a>
+          <p class="catalog-item__desc">Полностью адаптивный трех-страничный сайт</p>
+          <a href="https://askomarov.github.io/CatFromAcademy/index.html" target="_blank"
+            class="catalog-item__btn main-btn">view project</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="img/img-gllacy.webp 1x, img/img-gllacy@2x.webp 2x">
+            <img src="img/img-gllacy.png" srcset="img/img-gllacy@2x.png" alt="Превью сайта салон красоты Barber-shop"
+              width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Gllacy</h2>
+          </a>
+          <p class="catalog-item__desc">Интернет-магазин <br> мороженого</p>
+          <button type="button" class="catalog-item__btn main-btn">view project</button>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="img/img-sedona.webp">
+            <img src="img/img-sedona.jpg" alt="превью сайта для туристов Sedona" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/mySedonaByHtmlAcademy/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Sedona</h2>
+          </a>
+          <p class="catalog-item__desc">Информационный сайт<br> для туристов</p>
+          <a href="https://askomarov.github.io/mySedonaByHtmlAcademy/" target="_blank"
+            class="catalog-item__btn main-btn">view project</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="img/img-pink.webp">
+            <img src="img/img-pink.jpg" alt="Превью сайт приложения PINK" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/myPink/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Pink</h2>
+          </a>
+          <p class="catalog-item__desc">Продуктовый лендинг<br>приложения для iOS и Android</p>
+          <a href="https://askomarov.github.io/myPink/" target="_blank" class="catalog-item__btn main-btn">view
+            project</a>
+        </div>
+      </li>
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="img/img-city.webp 1x, img/img-city@2x.webp 2x">
+            <img src="img/img-city.jpg" srcset="img/img-city@2x.jpg 2x" alt="Превью сайт повышения квалификации"
+              width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Filter</h2>
+          </a>
+          <p class="catalog-item__desc">Пример списка товаров с кастомными элементами формы</p>
+          <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">view
+            project</a>
+        </div>
+      </li>
+
+    </ul>
+
+  </div>
+</section>
