--- a/source/html/skills.html
+++ b/source/html/skills.html
@@ -1,6 +1,6 @@
 <section class="skills">
   <div class="skills__container container">
-    <h2 class="skills__title sub-title">Навыки и инструменты, которыми владею</h2>
+    <h2 class="skills__title main-title">Навыки и инструменты, которыми владею</h2>
     <ul class="skills__list">
       <li class="skills__item">html
         <svg>
@@ -41,6 +41,9 @@
         <svg>
           <use xlink:href="#logos_figma"></use>
         </svg>
+      </li>
+      <li class="skills__item skills__item--more">
+        <span class="skills__item-more"></span>
       </li>
     </ul>
   </div>
