--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -1,3 +1,15 @@
-<section class="promo container">
+<section class="promo">
+  <div class="promo__container">
+    <div class="promo__img-wrap">
+      <img src="img/askomarov.jpg" alt="Artem Komarov" class="poromo__img" width="250" height="250">
+    </div>
+    <h1 class="promo__title">
+      Artem Komarov
+    </h1>
+    <p class="promo__text">
+      Frontend-разработчик
+    </p>
+
+  </div>
 
 </section>
