--- a/source/index.html
+++ b/source/index.html
@@ -11,19 +11,17 @@
 <body class="page">
   @@include('html/svg-sprite.html')
 
-  @@include('html/header2.html')
+  @@include('html/header.html')
 
   <main class="main">
-    <!-- @@include('html/promo.html') -->
+    @@include('html/promo.html')
     @@include('html/github.html')
     @@include('html/skills.html')
-    <section class="catalog-container container">
-      @@include('html/catalog.html')
-    </section>
+
+    @@include('html/catalog.html')
   </main>
 
   @@include('html/footer.html')
-
   <script src="js/script.min.js"></script>
 </body>
 
