добавлен проект с vue

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -3,9 +3,10 @@
     <h2 class="catalog__title main-title">Каталог выполненных работ</h2>
 
     <ul class="catalog-grid">
+      <!-- погнали -->
       <li class="catalog-item">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
-        <div class="catalog-item__img">
+        <div class="catalog-item__img catalog-item__img--pognali">
           <picture>
             <source type="image/webp" srcset="img/img-pognali@1xdesktop.webp">
             <img src="img/img-pognali@1xdesktop.png" srcset="" alt="Превью сайт повышения квалификации" width="358"
@@ -16,13 +17,15 @@
           <a href="https://askomarov.github.io/pognaliHtmlAcademy/" target="_blank" class="catalog-item__title-link">
             <h2 class="catalog-item__title">Pognali</h2>
           </a>
-          <p class="catalog-item__desc">Полностью адаптивный трех-страничный сайт, с огромным количеством трудоемких
-            элементов</p>
+          <p class="catalog-item__desc">Адаптивный трех-страничный сайт, с огромным количеством трудоемких
+            элементов, оживленный с помощью JavaScript. С использованием gulp, препроцессоров, адаптивных изображений
+          </p>
           <a href="https://askomarov.github.io/pognaliHtmlAcademy/" target="_blank"
             class="catalog-item__btn main-btn">view
             project</a>
         </div>
       </li>
+      <!-- кат-энерджи -->
       <li class="catalog-item">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
@@ -37,11 +40,13 @@
             class="catalog-item__title-link">
             <h2 class="catalog-item__title">CatEnergy</h2>
           </a>
-          <p class="catalog-item__desc">Полностью адаптивный трех-страничный сайт</p>
+          <p class="catalog-item__desc">Адаптивный трех-страничный сайт. С использованием gulp, препроцессоров,
+            адаптивных изображений</p>
           <a href="https://askomarov.github.io/CatFromAcademy/index.html" target="_blank"
             class="catalog-item__btn main-btn">view project</a>
         </div>
       </li>
+      <!-- глэйси -->
       <li class="catalog-item">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
@@ -52,13 +57,15 @@
           </picture>
         </div>
         <div class="catalog-item__hover-menu">
-          <a href="" class="catalog-item__title-link">
+          <a href="https://askomarov.github.io/1422707-gllacy-29/" target="_blank" class="catalog-item__title-link">
             <h2 class="catalog-item__title">Gllacy</h2>
           </a>
-          <p class="catalog-item__desc">Интернет-магазин <br> мороженого</p>
-          <button type="button" class="catalog-item__btn main-btn">view project</button>
+          <p class="catalog-item__desc">Двустраничный, неадаптивный, но красочный сайт</p>
+          <a href="https://askomarov.github.io/1422707-gllacy-29/" target="_blank"
+            class="catalog-item__btn main-btn">view project</a>
         </div>
       </li>
+      <!-- седона -->
       <li class="catalog-item">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
@@ -71,12 +78,13 @@
           <a href="https://askomarov.github.io/mySedonaByHtmlAcademy/" target="_blank" class="catalog-item__title-link">
             <h2 class="catalog-item__title">Sedona</h2>
           </a>
-          <p class="catalog-item__desc">Информационный сайт<br> для туристов</p>
+          <p class="catalog-item__desc">Адаптивный трех-страничный сайт. С использованием gulp, препроцессоров</p>
           <a href="https://askomarov.github.io/mySedonaByHtmlAcademy/" target="_blank"
             class="catalog-item__btn main-btn">view project</a>
         </div>
       </li>
-      <li class="catalog-item">
+      <!-- пинк -->
+      <!-- <li class="catalog-item">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
           <picture>
@@ -92,7 +100,8 @@
           <a href="https://askomarov.github.io/myPink/" target="_blank" class="catalog-item__btn main-btn">view
             project</a>
         </div>
-      </li>
+      </li> -->
+      <!-- карточки с фильтром -->
       <li class="catalog-item">
         <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
         <div class="catalog-item__img">
@@ -111,7 +120,25 @@
             project</a>
         </div>
       </li>
-
+      <!-- расчет среднего Vue.js -->
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="img/arkomVue.webp">
+            <img src="img/arkomVue.png" srcset="" alt="Превью форма подсчета среднего значения" width="358"
+              height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/middleval/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Расчет среднего значения</h2>
+          </a>
+          <p class="catalog-item__desc">Форма подсчета с использованием фреймворка Vue.js</p>
+          <a href="https://askomarov.github.io/filter/" target="_blank" class="catalog-item__btn main-btn">view
+            project</a>
+        </div>
+      </li>
     </ul>
 
   </div>
