--- a/source/html/header.html
+++ b/source/html/header.html
@@ -12,19 +12,19 @@
 
       <ul class="header-menu__site-list site-list">
         <li class="site-list__item">
-          <a class="site-list__link">Ваша выгода</a>
+          <a class="site-list__link">Пункт 1</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link">Документы</a>
+          <a class="site-list__link">Пункт 2</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link">Наши выплаты</a>
+          <a class="site-list__link">Пункт 3</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link">Условия выкупа</a>
+          <a class="site-list__link">Пункт 4</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link">Онлайн-оценка</a>
+          <a class="site-list__link">Пункт 5</a>
         </li>
       </ul>
     </nav>
