--- a/source/html/promo.html
+++ b/source/html/promo.html
@@ -1,7 +1,10 @@
 <section class="promo">
   <div class="promo__container">
     <div class="promo__img-wrap">
-      <img src="img/askomarov.jpg" alt="Artem Komarov" class="poromo__img" width="250" height="250">
+      <picture>
+        <source srcset="img/askomarov.webp" type="image/webp">
+        <img src="img/askomarov.jpg" alt="Artem Komarov" class="poromo__img" width="250" height="250">
+      </picture>
     </div>
     <h1 class="promo__title">
       Artem Komarov
