добавил 2 проекта, поправил анимацию

--- a/source/html/catalog.html
+++ b/source/html/catalog.html
@@ -139,6 +139,53 @@
             project</a>
         </div>
       </li>
+      <!-- kekstgramm -->
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="">
+            <img src="img/kekstagram.png" srcset="" alt="Превью kekstagram" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Кекстаграм</h2>
+          </a>
+          <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
+          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank" class="catalog-item__btn main-btn">заценить</a>
+          <a class="catalog-item__repo-link" href="https://github.com/askomarov/kekstagramByHTMLAcademy" target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-reposit"></use>
+            </svg>
+            <span>Repository</span>
+          </a>
+        </div>
+      </li>
+      <!-- keksobooking -->
+      <li class="catalog-item">
+        <div class="catalog-item__top"><span class="catalog-item__top-decor"></span></div>
+        <div class="catalog-item__img">
+          <picture>
+            <source type="image/webp" srcset="">
+            <img src="img/keksobooking.png" srcset="" alt="Превью Кексобукинг" width="358" height="578" />
+          </picture>
+        </div>
+        <div class="catalog-item__hover-menu">
+          <a href="https://askomarov.github.io/keksobookingByHTMLAcademy/" target="_blank" class="catalog-item__title-link">
+            <h2 class="catalog-item__title">Кексобукинг</h2>
+          </a>
+          <p class="catalog-item__desc">Учебная работа с онлайн-курса по JavaScript</p>
+          <a href="https://askomarov.github.io/kekstagramByHTMLAcademy/" target="_blank"
+            class="catalog-item__btn main-btn">посмотреть</a>
+          <a class="catalog-item__repo-link" href="https://askomarov.github.io/keksobookingByHTMLAcademy/" target="_blank">
+            <svg width="30" height="30">
+              <use xlink:href="#icon-reposit"></use>
+            </svg>
+            <span>Repository</span>
+          </a>
+        </div>
+      </li>
     </ul>
 
   </div>
