--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,10 @@
 
   @@include('html/header.html')
 
+
   <main class="main">
     @@include('html/promo.html')
+
     @@include('html/github.html')
     @@include('html/skills.html')
 
@@ -22,6 +24,18 @@
   </main>
 
   @@include('html/footer.html')
+  <svg class="waves" viewBox="0 24 150 28"
+    preserveAspectRatio="none" shape-rendering="auto">
+    <defs>
+      <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
+    </defs>
+    <g class="waves-animation">
+      <use xlink:href="#gentle-wave" x="48" y="0" fill="rgba(255,255,255,0.7)"></use>
+      <use xlink:href="#gentle-wave" x="48" y="3" fill="rgba(255,255,255,0.5)"></use>
+      <use xlink:href="#gentle-wave" x="48" y="5" fill="rgba(255,255,255,0.3)"></use>
+      <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff"></use>
+    </g>
+  </svg>
   <script src="js/script.min.js"></script>
 </body>
 
