--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -32,13 +32,13 @@
       </li>
 
     </ul>
-    <div class="footer__copy">
+    <!-- <div class="footer__copy">
       <a href="" class="footer__academy-logo">
         <svg width="100" height="34">
           <use xlink:href="#aslogoblack"></use>
         </svg>
       </a>
-    </div>
+    </div> -->
   </div>
 
 </footer>
