--- a/source/index.html
+++ b/source/index.html
@@ -24,8 +24,7 @@
   </main>
 
   @@include('html/footer.html')
-  <svg class="waves" viewBox="0 24 150 28"
-    preserveAspectRatio="none" shape-rendering="auto">
+  <svg class="waves" viewBox="0 24 150 28" preserveAspectRatio="none" shape-rendering="auto">
     <defs>
       <path id="gentle-wave" d="M-160 44c30 0 58-18 88-18s 58 18 88 18 58-18 88-18 58 18 88 18 v44h-352z"></path>
     </defs>
@@ -36,7 +35,7 @@
       <use xlink:href="#gentle-wave" x="48" y="7" fill="#fff"></use>
     </g>
   </svg>
-  <script src="js/script.min.js"></script>
+  <script type="module" src="js/main.min.js"></script>
 </body>
 
 </html>
